source/grammar/tests/invalid/statements/tokens.qasm
#;
3x;
x@x;
3.4.3;
3.4e3e3;
// Bad integer literals.
3__4;
3_4_;
0b123;
0B123;
0o789;
0O789;
0x12g;
0X12g;
12af;
